--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title">
+    
     <meta charset="utf-8">
     <title>Contractor-Site</title>
   </head>
   <body>
-    hi jake! im the home page!  make me pretty!
+  <div class="navigation-header">
+    <div class="logo-banner">
+      <img src="img/banner.png" alt="logo-banner" />
+    </div>
+    <nav class="navbar navbar-default navbar-static-top">
+  <div class="container">
+    <ul>
+      <li>home</li>
+      <li>about</li>
+    </ul>
+  </div>
+</nav>
+  </div>
 
+  <button type="button" class="btn btn-primary">Primary</button>
+
+
+
+
+
+
+
+
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+      <!-- Include all compiled plugins (below), or include individual files as needed -->
+      <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
